<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lblName"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edtTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            android:layout_weight="2"
            android:inputType="textPersonName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lblEmailAddress"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edtTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hintEmailAddress"
            android:inputType="textEmailAddress"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtBirthDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lblBirthDate"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edtTxtBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintBirthDate"
            android:layout_weight="2"
            android:inputType="date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lblPassword"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:layout_weight="2"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lblAddress"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edtTxtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintAddress"
            android:layout_weight="2"
            android:inputType="textPostalAddress"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtWebsite"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lblWebsite"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edtTxtWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintWebsite"
            android:layout_weight="2"
            android:inputType="textUri"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnStoreData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Store"
            android:onClick="storeData"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtShowData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>
</LinearLayout>

